hphp/hack/test/typecheck/constraints/class_static_variable.php.exp
File "class_static_variable.php", line 6, characters 24-41:
Some type constraint(s) here are violated (Typing[4323])
File "class_static_variable.php", line 3, characters 22-22:
'T' is a constrained type parameter
File "class_static_variable.php", line 3, characters 27-29:
Expected num
File "class_static_variable.php", line 6, characters 35-40:
But got string
