hphp/hack/test/typecheck/constraints/class_static_variable.php
<?hh

interface Constraint<T as num> {}

class InvalidConstraint {
  public static ?(int, Constraint<string>) $x = null;
}
